# aoc23

./: .gitignore  CMakeLists.txt  Makefile  README.md  add_day.sh  main.cpp  make_day.sh  make_stubs.sh  one.cpp
days/: day.hpp  one.hpp
include/: day.hpp  eight.hpp  eleven.hpp  five.hpp  four.hpp  nine.hpp  one.hpp  seven.hpp  six.hpp  ten.hpp  three.hpp  two.hpp
src/: eight.cpp  eleven.cpp  five.cpp  four.cpp  nine.cpp  one.cpp  seven.cpp  six.cpp  ten.cpp  three.cpp  two.cpp
templates/: _TEMPLATE.cpp  _TEMPLATE.hpp
test/: mainTest.cpp  test_solutions.cpp  unit_tests.cpp
